--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-minimal
 title: Amirhossein's homepage
-description: Welcome to my webpage!
+description: >- # A short description of your site
+  Welcome to my weboage
+remote_theme: vaibhavvikas/jekyll-theme-minimalistic
+
+plugins:
+  - jekyll-remote-theme
