--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Amirhossein's homepage
 description: >- # A short description of your site
-  Welcome to my webpage
+  I write about mathematics here!
 remote_theme: vaibhavvikas/jekyll-theme-minimalistic
 
 plugins:
