--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ minima:
 author:
   #name: John Smith
   email: "mailto:john.smith@foobar.com"
+minima:
+  social_links:
+    email: "mailto:yourname@example.com"
